--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import "tailwindcss";
 
 .flex-container {
@@ -17,6 +18,9 @@
 .header1 {
     padding: 5px;
     margin: 5px;
+    font-family: "Chakra Petch", serif;
+    font-weight: 600;
+    font-style: normal;
 }
 
 @layer base {
@@ -75,4 +79,6 @@
   }
 }
 
-
+@theme {
+    --font-chakra: "Chakra Petch", serif;
+}
