table integrated and styled

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,7 @@
   align-items: center;
   height: 100vh; /* Full viewport height */
   width: 100vw;
-  background-color: #2d2d2d;
+  background-color: #2b2b2b;
 }
 
 .flex-item {
